--- a/RP.Service/RP.Service.csproj
+++ b/RP.Service/RP.Service.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RP.Data\RP.Data.csproj" />
+    <ProjectReference Include="..\RP.DTO\RP.DTO.csproj" />
     <ProjectReference Include="..\RP.Repo\RP.Repo.csproj" />
   </ItemGroup>
 
