--- a/RP.WebApi/RP.WebApi.csproj
+++ b/RP.WebApi/RP.WebApi.csproj
@@ -9,6 +9,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.1" />
@@ -21,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RP.Data\RP.Data.csproj" />
+    <ProjectReference Include="..\RP.DTO\RP.DTO.csproj" />
     <ProjectReference Include="..\RP.Repo\RP.Repo.csproj" />
     <ProjectReference Include="..\RP.Service\RP.Service.csproj" />
   </ItemGroup>
