--- a/RP.API.Tests/RP.API.Tests.csproj
+++ b/RP.API.Tests/RP.API.Tests.csproj
@@ -2,13 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.0" />
-    <PackageReference Include="Moq" Version="4.8.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.1" />
+    <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="NBuilder" Version="5.0.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
@@ -19,6 +18,10 @@
     <ProjectReference Include="..\RP.API\RP.API.csproj" />
     <ProjectReference Include="..\RP.DTO\RP.DTO.csproj" />
     <ProjectReference Include="..\RP.Service\RP.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.NETCore.App" Version="2.0.6" />
   </ItemGroup>
 
 </Project>
