--- a/RP.API/appsettings.json
+++ b/RP.API/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "RPContext": "Server=TORRE;Database=RP_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RPContext": "Server=localhost\\SQLEXPRESS;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
